Dependency Injection Type

--- a/MvcCoreGiris/Views/Kisiler/Index.cshtml
+++ b/MvcCoreGiris/Views/Kisiler/Index.cshtml
@@ -3,11 +3,18 @@
     ViewData["Title"] = "Kisiler";
 }
 <h1>@ViewBag.Title</h1>
-<a  asp-action="Yeni" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i> Yeni Kişi</a>
+
+@if (TempData["mesaj"] !=null)
+{
+   <mesaj kapat-goster="true">
+       @TempData["mesaj"]
+   </mesaj>
+}
+<a asp-action="Yeni" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i> Yeni Kişi</a>
 
 <table class="table table-striped">
     <thead>
-        <tr  class="text-center">
+        <tr class="text-center">
             <th>Id</th>
             <th>Kişi Adı</th>
             <th>İşlemler</th>
@@ -20,7 +27,7 @@
                 <td>@item.Id</td>
                 <td>@item.KisiAd</td>
                 <td>
-                <a asp-action="Duzenle" asp-route-id="@item.Id"><i class="fas fa-edit"></i></a>
+                    <a asp-action="Duzenle" asp-route-id="@item.Id"><i class="fas fa-edit"></i></a>
                     <a href="#" onclick="sil(@item.Id, '@item.KisiAd')">Sil</a>
                 </td>
             </tr>
@@ -32,13 +39,13 @@
 </form>
 
 @section scripts {
-<script>
-    function sil(id, kisiAd) {
-        event.preventDefault();
-        if (confirm('"' + kisiAd + '" adlı kişi silinecektir emin misiniz? ')) {
-            document.silForm.elements.id.value = id;
-            document.silForm.submit();
+    <script>
+        function sil(id, kisiAd) {
+            event.preventDefault();
+            if (confirm('"' + kisiAd + '" adlı kişi silinecektir emin misiniz? ')) {
+                document.silForm.elements.id.value = id;
+                document.silForm.submit();
+            }
         }
-    }
-</script>
+    </script>
 }
